# armor_pen

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  play_apfsds_vs_composite.bat  play_apfsds_vs_era.bat  play_apfsds_vs_era_inert.bat  play_apfsds_vs_era_oblique.bat  play_apfsds_vs_era_oblique_inert.bat  play_apfsds_vs_nera.bat  play_apfsds_vs_rha.bat  play_apfsds_vs_spaced.bat  play_heat_vs_composite.bat  play_heat_vs_composite_uniform.bat  play_viewer.bat
solver/: CLAUDE.md  pyproject.toml
solver/scenarios/: apfsds_vs_composite.yaml  apfsds_vs_era.yaml  apfsds_vs_era_inert.yaml  apfsds_vs_era_oblique.yaml  apfsds_vs_era_oblique_inert.yaml  apfsds_vs_nera.yaml  apfsds_vs_rha.yaml  apfsds_vs_spaced.yaml  heat_vs_composite.yaml  heat_vs_composite_uniform.yaml  standoff_conv_d6mm_s00.yaml  standoff_conv_d6mm_s90.yaml  standoff_conv_dx188_s00.yaml  standoff_conv_dx188_s90.yaml  standoff_conv_dx250_s00.yaml  standoff_conv_dx250_s90.yaml  standoff_s00.yaml  standoff_s30.yaml  standoff_s60.yaml  standoff_s90.yaml  sweep_copper_v1500.yaml  sweep_copper_v2500.yaml  sweep_copper_v3500.yaml  sweep_copper_v5000.yaml  sweep_copper_v7000.yaml  sweep_tungsten_v1500.yaml  sweep_tungsten_v2500.yaml  sweep_tungsten_v3500.yaml  sweep_tungsten_v5000.yaml  sweep_tungsten_v7000.yaml
solver/src/ballistics_solver/: __init__.py  cache_writer.py  config.py  (+3 more)
solver/tests/: test_artificial_viscosity.py  test_boundary_walls.py  test_cache_format.py  test_cfl_sizing.py  test_config.py  test_energy_equation.py  test_nera_dissipation.py  test_stress_paths.py  test_validate_cache.py
(+21 files in other folders)
